# Linux-basics-2020

./: Dockerfile  README.md  index.md  ref_download.sh  refs.txt  report.txt  task1.txt  task2.txt
refs/: Tcpdump  actions  creating-a-docker-container-action  curl-vs-wget.html  getting-started-with-github-actions  index.html  index.html.1  настройка_сети_вручную
seminar02/task01/: task01.sh
seminar02/task03/: task03.sh
seminar02/task04/: task04.sh
seminar02/task05/: task05.sh
seminar02/task06/: task06.sh
seminar02/task07/: task07.sh
seminar02/task08/: task08.sh  test08.py
seminar02/task09/: task09.sh
seminar03/task01/: rnd.txt  task01.sh
seminar03/task02/: task02.sh
seminar03/task03/: task03.sh
seminar03/task04/: task04.sh
seminar03/task05/: task05.sh  test05.py
seminar03/task06/: task06.sh
seminar03/task07/: a.out  task07.sh
seminar04/: checker.py
seminar04/task01/: Makefile  fast.out
seminar04/task02/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  fast
seminar04/task02/Testing/Temporary/: CTestCostData.txt
